src/JavaCC/MiniJavaCompiler.java
/* MiniJavaCompiler.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaCompiler.java */
package JavaCC;

import java.util.*;
import java.io.*;

public class MiniJavaCompiler implements MiniJavaCompilerConstants {
    public static Map<String, String> symbolTable = new LinkedHashMap<String, String>();

    public static void main(String args[]) {
        if (args.length < 1) {
            System.out.println("Usage: java JavaCC.MiniJavaCompiler <filename>");
            return;
        }
        try {
            FileInputStream fis = new FileInputStream(args[0]);
            MiniJavaCompiler parser = new MiniJavaCompiler(fis);
            ASTNode root = parser.Start();

            System.out.println("Syntax validation successful for: " + args[0]);
            System.out.println("\u005cn--- Symbol Table ---");
            System.out.println(String.format("%-15s | %-10s", "Identifier", "Type"));
            System.out.println("---------------------------------");
            for (Map.Entry<String, String> entry : symbolTable.entrySet()) {
                System.out.println(String.format("%-15s | %-10s", entry.getKey(), entry.getValue()));
            }
            System.out.println("\u005cn--- Abstract Syntax Tree ---");
            root.print("");
        } catch (ParseException e) {
            System.err.println("Syntax Error at Line " + e.currentToken.next.beginLine);
            System.err.println("Encountered: " + e.currentToken.next.image);
        } catch (FileNotFoundException e) {
            System.err.println("Error: File '" + args[0] + "' not found.");
        }
    }

  static final public ASTNode Start() throws ParseException {ProgramNode prog = new ProgramNode(); ASTNode n;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case IF:
      case WHILE:
      case RETURN:
      case CLASS:
      case STRING_TYPE:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n = GlobalStatement();
prog.add(n);
    }
    jj_consume_token(0);
{if ("" != null) return prog;}
    throw new Error("Missing return statement in function");
  }

// Added GlobalStatement to allow classes at the top level
  static final public ASTNode GlobalStatement() throws ParseException {ASTNode n; Token id; List<ASTNode> body;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CLASS:{
      jj_consume_token(CLASS);
      id = jj_consume_token(IDENTIFIER);
      jj_consume_token(LBRACE);
      body = Block();
      jj_consume_token(RBRACE);
{if ("" != null) return new ClassNode(id.image, body);}
      break;
      }
    case INT:
    case IF:
    case WHILE:
    case RETURN:
    case STRING_TYPE:
    case IDENTIFIER:{
      n = Statement();
{if ("" != null) return n;}
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Statement() throws ParseException {ASTNode n;
    List<ASTNode> body = new ArrayList<ASTNode>();
    List<ASTNode> elseBody = null;
    ASTNode retVal = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case STRING_TYPE:{
      n = VarDecl();
{if ("" != null) return n;}
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_1(2)) {
        n = Assignment();
{if ("" != null) return n;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case WHILE:{
          jj_consume_token(WHILE);
          jj_consume_token(LPAREN);
          n = Expression();
          jj_consume_token(RPAREN);
          jj_consume_token(LBRACE);
          body = Block();
          jj_consume_token(RBRACE);
{if ("" != null) return new WhileNode(n, body);}
          break;
          }
        case IF:{
          jj_consume_token(IF);
          jj_consume_token(LPAREN);
          n = Expression();
          jj_consume_token(RPAREN);
          jj_consume_token(LBRACE);
          body = Block();
          jj_consume_token(RBRACE);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ELSE:{
            jj_consume_token(ELSE);
            jj_consume_token(LBRACE);
            elseBody = Block();
            jj_consume_token(RBRACE);
            break;
            }
          default:
            jj_la1[2] = jj_gen;
            ;
          }
{if ("" != null) return new IfNode(n, body, elseBody);}
          break;
          }
        case RETURN:{
          jj_consume_token(RETURN);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case NUMBER:
          case STRING_LITERAL:
          case IDENTIFIER:{
            retVal = Expression();
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            ;
          }
          jj_consume_token(SEMI);
{if ("" != null) return new ReturnNode(retVal);}
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public List<ASTNode> Block() throws ParseException {List<ASTNode> nodes = new ArrayList<ASTNode>(); ASTNode n;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case IF:
      case WHILE:
      case RETURN:
      case STRING_TYPE:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_2;
      }
      n = Statement();
nodes.add(n);
    }
{if ("" != null) return nodes;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode VarDecl() throws ParseException {ASTNode n;
    n = VarDeclNoSemi();
    jj_consume_token(SEMI);
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode VarDeclNoSemi() throws ParseException {Token t; Token id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      t = jj_consume_token(INT);
      break;
      }
    case STRING_TYPE:{
      t = jj_consume_token(STRING_TYPE);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    id = jj_consume_token(IDENTIFIER);
MiniJavaCompiler.symbolTable.put(id.image, t.image);
    {if ("" != null) return new VarDeclNode(t.image, id.image);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Assignment() throws ParseException {ASTNode n;
    n = AssignmentNoSemi();
    jj_consume_token(SEMI);
{if ("" != null) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode AssignmentNoSemi() throws ParseException {Token id; ASTNode val;
    id = jj_consume_token(IDENTIFIER);
    jj_consume_token(ASSIGN);
    val = Expression();
{if ("" != null) return new AssignmentNode(id.image, val);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Expression() throws ParseException {ASTNode left, right; Token op;
    left = Primary();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case LT:
      case GT:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        break;
        }
      case LT:{
        op = jj_consume_token(LT);
        break;
        }
      case GT:{
        op = jj_consume_token(GT);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = Primary();
left = new BinaryOpNode(left, op.image, right);
    }
{if ("" != null) return left;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Primary() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUMBER:{
      t = jj_consume_token(NUMBER);
{if ("" != null) return new LiteralNode(t.image);}
      break;
      }
    case IDENTIFIER:{
      t = jj_consume_token(IDENTIFIER);
{if ("" != null) return new LiteralNode(t.image);}
      break;
      }
    case STRING_LITERAL:{
      t = jj_consume_token(STRING_LITERAL);
{if ("" != null) return new LiteralNode(t.image);}
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_3R_4()
 {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3R_5()
 {
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MiniJavaCompilerTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x4003d80,0x4003d80,0x200,0x7000000,0x2080,0xd00,0x4002d80,0x2080,0xf00000,0xf00000,0x7000000,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[1];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public MiniJavaCompiler(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MiniJavaCompiler(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MiniJavaCompilerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public MiniJavaCompiler(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new MiniJavaCompilerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public MiniJavaCompiler(MiniJavaCompilerTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(MiniJavaCompilerTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  @SuppressWarnings("serial")
  static private final class LookaheadSuccess extends java.lang.Error { }
  static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  static private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
  static private int[] jj_lasttokens = new int[100];
  static private int jj_endpos;

  static private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[27];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 11; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 27; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

  static private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 1; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  static private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

}

abstract class ASTNode {
    public abstract void print(String indent);
}

class ProgramNode extends ASTNode {
    List<ASTNode> children = new ArrayList<ASTNode>();
    public void add(ASTNode n) { children.add(n); }
    public void print(String indent) {
        System.out.println(indent + "Program");
        for (ASTNode n : children) n.print(indent + "  ");
    }
}

// Added ClassNode
class ClassNode extends ASTNode {
    String className;
    List<ASTNode> body;
    public ClassNode(String name, List<ASTNode> body) { this.className = name; this.body = body; }
    public void print(String indent) {
        System.out.println(indent + "Class: " + className);
        for (ASTNode n : body) n.print(indent + "  ");
    }
}

// Added ReturnNode
class ReturnNode extends ASTNode {
    ASTNode value;
    public ReturnNode(ASTNode v) { value = v; }
    public void print(String indent) {
        System.out.println(indent + "ReturnStatement");
        if (value != null) value.print(indent + "  ");
    }
}

class VarDeclNode extends ASTNode {
    String type, name;
    public VarDeclNode(String t, String n) { type = t; name = n; }
    public void print(String indent) { System.out.println(indent + "VarDecl: " + type + " " + name); }
}

class AssignmentNode extends ASTNode {
    String varName;
    ASTNode value;
    public AssignmentNode(String n, ASTNode v) { varName = n; value = v; }
    public void print(String indent) {
        System.out.println(indent + "Assignment: " + varName + " =");
        value.print(indent + "  ");
    }
}

class WhileNode extends ASTNode {
    ASTNode condition;
    List<ASTNode> body;
    public WhileNode(ASTNode c, List<ASTNode> b) { condition = c; body = b; }
    public void print(String indent) {
        System.out.println(indent + "WhileLoop");
        condition.print(indent + "  [Cond]");
        for(ASTNode n : body) n.print(indent + "  [Body]");
    }
}

class IfNode extends ASTNode {
    ASTNode condition;
    List<ASTNode> thenBody;
    List<ASTNode> elseBody;
    public IfNode(ASTNode c, List<ASTNode> tb, List<ASTNode> eb) {
        condition = c; thenBody = tb; elseBody = eb;
    }
    public void print(String indent) {
        System.out.println(indent + "IfStatement");
        condition.print(indent + "  [Cond]");
        for(ASTNode n : thenBody) n.print(indent + "  [ThenBody]");
        if (elseBody != null) {
            for(ASTNode n : elseBody) n.print(indent + "  [ElseBody]");
        }
    }
}

class BinaryOpNode extends ASTNode {
    String op;
    ASTNode left, right;
    public BinaryOpNode(ASTNode l, String o, ASTNode r) { left = l; op = o; right = r; }
    public void print(String indent) {
        System.out.println(indent + "BinaryOp (" + op + ")");
        left.print(indent + "  ");
        right.print(indent + "  ");
    }
}

class LiteralNode extends ASTNode {
    String val;
    public LiteralNode(String v) { val = v; }
    public void print(String indent) { System.out.println(indent + "Literal: " + val); }
}
